inteltool: handle unsafe dumping of graphics registers
The current implementation from Vladimir simply dumps 1 MB of memory
contents starting at the base address of the second PCI device (which
most likely is the VGA controller on Intel systems). This locks up a
number of different systems, e.g. my Ibex Peak-based T410s.

This patch documents the issue and stops dumping the graphics registers
for the -a/--all parameter.

Change-Id: I581bdc63db60afaf4792bc11fbeed73aab57f63a
Signed-off-by: Stefan Tauner <stefan.tauner@gmx.at>
Reviewed-on: https://review.coreboot.org/14627
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>
Reviewed-by: Felix Held <felix-coreboot@felixheld.de>

--- a/util/inteltool/inteltool.8
+++ b/util/inteltool/inteltool.8
@@ -35,7 +35,8 @@ Dump I/O Controller Hub (ICH) southbridge RCBA registers.
 Dump I/O Controller Hub (ICH) southbridge SPI registers and bios control.
 .TP
 .B "\-f, \-\-gfx"
-Dump graphics registers.
+.RB "Dump graphics registers. " \
+"Due to unknown reasons this might lock up some systems after a few seconds."
 .TP
 .B "\-p, \-\-pmbase"
 Dump I/O Controller Hub (ICH) southbridge PMBASE registers.
